--- a/pfsengine3/pfsengine3.vcxproj
+++ b/pfsengine3/pfsengine3.vcxproj
@@ -22,28 +22,44 @@
     <ClCompile Include="Source\Containers\QuadTree.cpp" />
     <ClCompile Include="Source\Container\Array.cpp" />
     <ClCompile Include="Source\Container\PFSEngineColor.cpp" />
+    <ClCompile Include="Source\Debug\DebugRenderer.cpp" />
     <ClCompile Include="Source\Input\InputManager.cpp" />
     <ClCompile Include="Source\Level\Level.cpp" />
     <ClCompile Include="Source\Logging\DebugLog.cpp" />
     <ClCompile Include="Source\Math\Box.cpp" />
     <ClCompile Include="Source\Math\Math.cpp" />
+    <ClCompile Include="Source\Math\Matrix2.cpp" />
     <ClCompile Include="Source\Math\Vector2.cpp" />
     <ClCompile Include="Source\MemoryManagement\ResourceManager.cpp" />
     <ClCompile Include="Source\MemoryManagement\UniquePtr.cpp" />
     <ClCompile Include="Source\Misc\Globals.cpp" />
     <ClCompile Include="Source\Misc\PFSEngineString.cpp" />
+    <ClCompile Include="Source\Physics\ContactGenerators\CableParticleContactGenerator.cpp" />
+    <ClCompile Include="Source\Physics\ContactGenerators\RodParticleContactGenerator.cpp" />
+    <ClCompile Include="Source\Physics\ForceGenerators\FixedSpringParticleForceGenerator.cpp" />
+    <ClCompile Include="Source\Physics\ForceGenerators\ParticleForceGeneratorRegistry.cpp" />
+    <ClCompile Include="Source\Physics\ForceGenerators\SpringParticleForceGenerator.cpp" />
+    <ClCompile Include="Source\Physics\Particle.cpp" />
+    <ClCompile Include="Source\Physics\ParticleWithLifetime.cpp" />
+    <ClCompile Include="Source\Physics\PhysicsGlobals.cpp" />
+    <ClCompile Include="Source\Physics\PhysicsSystem.cpp" />
+    <ClCompile Include="Source\Reflection\Reflection.cpp" />
     <ClCompile Include="Source\Rendering\PFSEngineWindow.cpp" />
     <ClCompile Include="Source\Rendering\RenderTarget.cpp" />
+    <ClCompile Include="Source\UI\InspectorPanel.cpp" />
     <ClCompile Include="Source\UI\Panel.cpp" />
     <ClCompile Include="Source\UI\TreePanel.cpp" />
     <ClCompile Include="Source\WorldObject\Transform.cpp" />
     <ClCompile Include="Source\WorldObject\Transformable.cpp" />
     <ClCompile Include="Source\WorldObject\WorldObject.cpp" />
+    <ClCompile Include="Source\WorldObject\WorldObjectManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Containers\QuadTree.h" />
     <ClInclude Include="Source\Container\Array.h" />
     <ClInclude Include="Source\Container\PFSEngineColor.h" />
+    <ClInclude Include="Source\Core\EngineGlobals.h" />
+    <ClInclude Include="Source\Debug\DebugRenderer.h" />
     <ClInclude Include="Source\Input\InputManager.h" />
     <ClInclude Include="Source\Input\MouseEventListener.h" />
     <ClInclude Include="Source\Level\Level.h" />
@@ -51,20 +67,37 @@
     <ClInclude Include="Source\Math\Box.h" />
     <ClInclude Include="Source\Math\EngineDefines.h" />
     <ClInclude Include="Source\Math\Math.h" />
+    <ClInclude Include="Source\Math\Matrix2.h" />
     <ClInclude Include="Source\Math\Vector2.h" />
     <ClInclude Include="Source\MemoryManagement\ResourceManager.h" />
     <ClInclude Include="Source\MemoryManagement\UniquePtr.h" />
     <ClInclude Include="Source\Misc\Globals.h" />
     <ClInclude Include="Source\Misc\PFSEngineString.h" />
+    <ClInclude Include="Source\Physics\ContactGenerators\CableParticleContactGenerator.h" />
+    <ClInclude Include="Source\Physics\ContactGenerators\ParticleContactGenerator.h" />
+    <ClInclude Include="Source\Physics\ContactGenerators\RodParticleContactGenerator.h" />
+    <ClInclude Include="Source\Physics\ForceGenerators\FixedSpringParticleForceGenerator.h" />
+    <ClInclude Include="Source\Physics\ForceGenerators\ParticleForceGenerator.h" />
+    <ClInclude Include="Source\Physics\ForceGenerators\ParticleForceGeneratorRegistry.h" />
+    <ClInclude Include="Source\Physics\ForceGenerators\SpringParticleForceGenerator.h" />
+    <ClInclude Include="Source\Physics\PhysicsShared.h" />
+    <ClInclude Include="Source\Physics\Particle.h" />
+    <ClInclude Include="Source\Physics\ParticleWithLifetime.h" />
+    <ClInclude Include="Source\Physics\PhysicsGlobals.h" />
+    <ClInclude Include="Source\Physics\PhysicsSystem.h" />
+    <ClInclude Include="Source\Reflection\Reflection.h" />
     <ClInclude Include="Source\Rendering\PFSEngineWindow.h" />
     <ClInclude Include="Source\Rendering\RenderTarget.h" />
     <ClInclude Include="Source\ThirdParty\json.h" />
+    <ClInclude Include="Source\UI\InspectorPanel.h" />
     <ClInclude Include="Source\UI\Panel.h" />
     <ClInclude Include="Source\UI\TreePanel.h" />
     <ClInclude Include="Source\WorldObject\Nameable.h" />
+    <ClInclude Include="Source\WorldObject\ObjectListeners.h" />
     <ClInclude Include="Source\WorldObject\Transform.h" />
     <ClInclude Include="Source\WorldObject\Transformable.h" />
     <ClInclude Include="Source\WorldObject\WorldObject.h" />
+    <ClInclude Include="Source\WorldObject\WorldObjectManager.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
